- amendments to bulk exams upload - amendments to sql db

--- a/appletExamsUploader/src/Client/Client.html
+++ b/appletExamsUploader/src/Client/Client.html
@@ -14,9 +14,9 @@
     <APPLET codebase="classes" code="Client/Client.class" width=1140 height=500>
         <param name='username' value="team@ucwaterdragons.org" />
         <param name='password' value="BrianWong" />
-        <param name='handlerPath' value="ftp.ucwaterdragons.org" />
-        <param name='year' value="20091" />
-        <param name='url' value="http://localhost/makeAlbum2.php?year=2009&name=test&id=2500" />
+        <param name='handlerPath' value="http://localhost:81/applets/bulkExamsHandler.php" />
+        <param name='year' value="20201" />
+        <param name='url' value="http://localhost:81/courses_dev.php/maintenance" />
     </APPLET>
     </P>
   </body>
