bulk exam upload now working

--- a/appletExamsUploader/src/Client/Client.html
+++ b/appletExamsUploader/src/Client/Client.html
@@ -12,9 +12,10 @@
   <body>
     <P>
     <APPLET codebase="classes" code="Client/Client.class" width=1140 height=500>
-        <param name='username' value="team@ucwaterdragons.org" />
-        <param name='password' value="BrianWong" />
-        <param name='handlerPath' value="http://localhost:81/applets/bulkExamsHandler.php" />
+        <param name='username' value="skule_uploader" />
+        <param name='password' value="3kULE" />
+        <param name='handlerPath' value="http://localhost:81/courses_dev.php/invisible/bulkExamsHandler" />
+        <param name="registrationPath" value="http://localhost:81/courses_dev.php/invisible/bulkExamsRegistration" />
         <param name='year' value="20201" />
         <param name='url' value="http://localhost:81/courses_dev.php/maintenance" />
     </APPLET>
